packages/openneuro-app/src/sass/crn_app/_dataset.sidebar.scss
.show-nav-btn {
    position: absolute;
    background: $de;
    height: 45px;
    width: 45px;
    padding: 2px 0 0 8px;
    font-size: 28px;
    text-align: center;
    margin: 0;
    cursor: pointer;
    color: $c-56;
    border: none;
    border-bottom: 2px solid $bbb;
    z-index: 200;
    left: -1px;
        transition: left .3s;
    -webkit-transition: left 0.3s;
        z-index: 1500;
}



html,
body,
#main,
.app,
.main.view.container,
.dataset-container,
.dataset-route,
.dataset-wrap {
    height: 100%;
}

.dataset-wrap,
.dataset-animation {
    position: relative;
}

.dataset-wrap {
    z-index: 100;
    margin-top: 45px;
}

.dataset-animation {
    width: 100%;
    padding-top: 15px;
    -webkit-transition: width .3s;
    transition: width .3s;
    
}

.dataset-container {
    position: relative;
    -webkit-perspective: 1500px;
    perspective: 1500px;
    -webkit-perspective-origin: 0% 50%;
    perspective-origin: 0% 50%;
    max-width: 100%;
    overflow: hidden;
}

.dataset-route {
    position: relative;
    z-index: 99;
    height: 100%;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
    left: 0;
    -webkit-transition: all .3s;
    transition: all .3s;
}

.left-sidebar {
    position: absolute;
    top: 0;
    left: 0;
    visibility: hidden;
    width: 20%;
    height: 100%;
    -webkit-transition: all .3s;
    transition: all .3s;
    -webkit-transform: translate3d(-100%, 0, 0);
    transform: translate3d(-100%, 0, 0);
     z-index: 1;

    .slide {
        z-index: 1200;
        background-color: $eee;
        display: block;
        position: relative;
        height: 100%;
        padding: 0;

        h3 {
            min-height: 43px;
            margin: 0;
            padding: 8px 15px;
            width: 100%;
            background: $de
        }

        ul {
            padding: 0 0 200px;
            margin: 0;
            list-style: none;
            overflow-y: scroll;
            height: 100%;
            position: absolute;
            width: 100%;
            border-right: 2px solid $bbb;

            a {
                font-size: 14px;
                background-color: transparent;
                width: 100%;
                display: block;
                text-decoration: none;
                border-top: 1px solid $bbb;
                transition: background .4s ease;

                &:hover {
                    text-decoration: none;
                    background: $transparent1;
                    color: $black;
                }

                &.active:hover,
                &.active {
                    background-color:  $white;
                    box-shadow: inset 0 0 2px $transparent1;
                    color: $secondary;
                    color: var(--secondary);

                    .date-modified {
                        color: $secondary;
                        color: var(--secondary);
                    }
                }

                .dataset-type {
                    padding: 10px 0;
                    display: inline-block;
                }
                .date-modified {
                    padding: 10px 5px 10px 8px;
                    text-align: right;
                    display: inline-block;
                    font-size: 11px;
                    color: $c-77;
                    .update-label {
                        text-transform: uppercase;
                    }
                }
                .icons {
                    padding-left: 0;
                    float: right;
                    .published,
                    .job-count {
                        margin: 10px 0;
                        display: inline-block;
                        padding: 0 5px;
                        min-width: 30px;
                        text-align: center;
                        font-size: 12px;
                        .count {
                            font-size: 12px;
                            margin-left: 2px;
                            position: relative;
                        }
                    }
                }
            }

            li:first-child a {
                border-top: 1px solid $bbb;
            }
            li:last-child a {
                border-bottom: 1px solid $bbb;
            }

        }
    }
}

.dataset-tools-wrap {
     margin-left: 0;
    transition: margin-left .3s;
    -webkit-transition: margin-left 0.3s;

    .tools {
        margin-left:44px;
     }
}

.snapshot-select-label {
    text-align: center;
    float: left;
    display: block;
    margin-right: 5px;
    position: relative;
    color: $c-66;
    width: auto;
    max-width: 400px;
    font-size: 21px;
    overflow: hidden;
    transition: all .3s;
    -webkit-transition: all .3s;
    cursor: pointer;

    .snapshot,
    .draft {
        background: $de;
        padding: 7px 20px;
        white-space: nowrap;
        height: 45px;
        border-right: 2px solid $bbb;
        border-bottom: 2px solid $bbb;
    }
    .snapshot {
        color: $c-56;
        &:hover { color: $c-77;}
    }

    .draft {
        color: $brand-danger;
        &:hover {
            color: darken($brand-danger, 10%);
        }
    }
}



.open {
    .dataset-route {
        left: 20%;
        width: 80%;
    }
    .left-sidebar {
        -webkit-transform: translate3d(0, 0, 0);
        transform: translate3d(0, 0, 0);
        visibility: visible;
        -webkit-transition: -webkit-transform .3s;
        transition: transform .3s;

    }

    .snapshot-select-label{
        display: block
    }

    .dataset-tools-wrap{
        margin-left: 20%;
        transition: margin-left .3s;
        -webkit-transition: margin-left 0.3s;
    }
    .show-nav-btn {
        border-right: 2px solid $bbb;
        left: 20%;
        transition: left .3s;
        -webkit-transition: left 0.3s;
    }
}

